Making HTML structure

--- a/index.html
+++ b/index.html
@@ -12,15 +12,25 @@
 </head>
 <body>
 
-  Learning
-
-  Published 21 Dec 2023
-
-  HTML & CSS foundations
-
-  These languages are the backbone of every website, defining structure, content, and presentation.
-
-  Greg Hooper
+  <div class="container">
+    <div class="blog-preview-card">
+      <div class="wrapper">
+        <div class="images-window">
+          <img src="./assets/images/illustration-article.svg" alt="Abstract illustration">
+        </div>
+        <div class="text-window">
+          <h4>Learning</h4>
+          <p>Published 21 Dec 2023</p>
+          <h2>HTML & CSS foundations</h2>
+          <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
+        </div>
+        <div class="author-window">
+          <img src="./assets/images/image-avatar.webp" alt="Author's profile pic">
+          <p>Greg Hooper</p>
+        </div>
+      </div>
+    </div>
+  </div>
   
 </body>
 </html>
